<resources>


    <!-- General-->
    <string name="yesSure">Yes. Exit game</string>
    <string name="no">No</string>
    <string name="dontExit">Don\'t exit</string>
    <string name="waitForLoad">Loading - Wait a minute</string>


    <!-- Frontpage-->
    <string name="app_name">s183760 Hangman</string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="single_game">Single Game</string>
    <string name="titleText">HANGMAN</string>
    <string name="category">CATEGORY</string>
    <string name="challenge_mode">Challenge Mode</string>


    <!-- in play messages-->
    <string name="yourGuess">Your guess</string>
    <string name="onlyGuessOneLetter">Your guess must be one letter only</string>
    <string name="alreadyGuessed">You have already guessed:</string>
    <string name="alreadyWon">You have already won the game!</string>
    <string name="alreadyLost">You have already lost the game!</string>
    <string name="invalidGuess">Invalid guess!</string>
    <string name="play_titletext">You are playing Hangman</string>
    <string name="makeguess">Make guess!</string>
    <string name="youguessed">You guessed: </string>
    <string name="youWon">You won!</string>
    <string name="youLost">You lost!</string>
    <string name="youGaveUp">You gave up!</string>
    <string name="youGaveUpTheWordWas">You gave up! The word was: </string>
    <string name="exitOrNot">Exit game</string>
    <string name="sureToExit">Are you sure you want to exit the game? Your progress will be lost</string>
    <string name="sureToExitCM">Are you sure you want to exit the game? Your streak of %d will be lost</string>
    <string name="sureToExitCM2">Are you sure you want to exit the game? You will end your current streak of %d.</string>
    <string name="sureToExitBeforeHS">Are you sure you want to exit before submitting your high score?</string>


    <!-- Settings -->
    <string name="language">Language</string>
    <string name="saveChanges">Save changes</string>
    <string name="lanugage">Language</string>
    <string name="musicSwitch">Music</string>


    <!-- Game Won-->
    <string name="GzText">Congratulations! You guessed the word</string>
    <string name="YouGuessed">You guessed the word</string>
    <string name="InGuesses">With %s incorrect guesses</string>
    <string name="InOneGuess">With 1 incorrect guess</string>
    <string name="didntguessword">You didn\'t guess the word</string>
    <string name="yourstreakis">Your streak is</string>
    <string name="nextword">Next Word</string>

    <!-- Game Over-->
    <string name="finishedWithStreak">You finished with a streak of</string>
    <string name="didntMakeHS">You didn\'t make it to the highscores</string>
    <string name="madeHs">Your made it to the highscores!</string>
    <string name="name">Name</string>
    <string name="writeName">Write your name below</string>
    <string name="submit">Submit</string>


    <!-- Highscores-->
    <string name="noHsInCategory">There are no highscores in this category yet.</string>


    <!-- Settings-->
    <string-array name="languages_array">
        <item>Dansk</item>
        <item>English</item>
    </string-array>
    <string name="enablecheats">Enable cheats</string>

    <!-- Categories-->
    <string-array name="categories_array">
        <item>Mixed danish words</item>
        <item>Danish cities</item>
    </string-array>

    <!-- CM_rules-->
    <string name="letsGo">Let\'s Go!</string>
    <string name="rules">How many words can you guess before you lose?</string>
    <string name="cyaOnHs">See if you can make it to the highscores!</string>



</resources>