<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameWonAkt">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/GzImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/forkert1" />

        <TextView
            android:id="@+id/GzTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/GzText"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/YouGuessedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YouGuessed"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/SecretWordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SecretWord"
            android:fontFamily="sans-serif-medium"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/InGuessesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/InGuesses" />

        <FrameLayout
            android:id="@+id/GameWon_ChallengeModeFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>